CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(SF_CONTROLLER)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#SET_TARGET_PROPERTIES(sf_controller PROPERTIES LINKER_LANGUAGE C)

MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(lib)